[gd_scene load_steps=4 format=3 uid="uid://cvu4ayn55v757"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_7dic1"]

[sub_resource type="FontFile" id="FontFile_ax7nj"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwtja"]
bg_color = Color(1, 0.207843, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_7dic1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontFile_ax7nj")
theme_override_font_sizes/font_size = 42
text = "Lives: 3"

[node name="BoostReady" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Boost Ready: True"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iwtja")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "You Have Lost
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Reset the game
"

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
